Styling fixes for modal dialogs on small device resolutions

--- a/modules/app-main/src/main/resources/assets/styles/home.less
+++ b/modules/app-main/src/main/resources/assets/styles/home.less
@@ -53,10 +53,13 @@
     margin-bottom: -4em;
   }
 
-  .cancel-button-top, .cancel-button-top:hover {
-    background-color: rgba(0, 0, 0, 0);
-    &:before {
-      color: #bfbfbf;
+  .cancel-button-top {
+    background-color: rgba(0, 0, 0, 0) !important;
+
+    &:hover {
+      &:before, &:after {
+        background-color: @admin-white !important;
+      }
     }
   }
 
@@ -65,7 +68,7 @@
   }
 
   .modal-dialog-header {
-    padding: 0;
+    padding: 0 !important;
   }
 
   .modal-dialog-body {
